apps/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartops-ingress
  namespace: smartops-dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:

          # -------------------------
          # Dashboard (root)
          # -------------------------
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smartops-dashboard
                port:
                  number: 80

          # -------------------------
          # Grafana
          # -------------------------
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: smartops-grafana
                port:
                  number: 80

          - path: /prometheus
            pathType: Prefix
            backend:
              service:
               name: smartops-prometheus-prometheus
               port:
                number: 9090
